--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -1016,13 +1016,12 @@
  <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts </summary> 
   <p  id="cd150">Report payments you made under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and leather-tanning industries using code 150.</p> 
 
-<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
  </details> 
  </li>
 <li class="code-num">
  <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act </summary> 
   <p  id="cd152">Report payments you made under a supplementary unemployment benefit plan (<abbr title="Supplementary unemployment benefit plan">SUBP</abbr>) using code 152.</p> 
-<p><strong>Do not</strong> report maternity or paternity top ups, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p>
+<p><strong>Do not</strong> report maternity or paternity top ups using code 152, use the <a href="/cra-arc/payroll/file/t4slip.html">T4 slip</a>.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/subp.html">Payments from supplementary unemployment benefit plan (SUBP)</a></p>      
  </details> 
  </li>
@@ -1036,7 +1035,7 @@
 <li class="code-num">
  <details>  <summary>Code 156 – Bankruptcy settlement </summary> 
   <p  id="cd156">Report payments you made as a trustee in bankruptcy to employees of a bankrupt corporation in settlement of claims filed for wages that the bankrupt employer did not pay using code 156.</p> 
-<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/changes-your-business/receivership-bankruptcy/bankruptcy.html">Bankruptcy</a></p>  
 
 </details> 
  </li>
@@ -1083,7 +1082,8 @@
 </dd>
 
 </dl>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/epsp.html">Payments from an employees profit sharing plan (EPSP)</a></p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/epsp.html"></a>Payments from a profit sharing plan </p>         
+
 </details> 
 </li>
 
@@ -1115,13 +1115,13 @@
 <li class="code-num">
 <details>  <summary>Code 200 – Provincial/Territorial COVID-19 financial assistance payments </summary> 
 <p id="cd200">Report amounts that were paid as financial assistance by a provincial or territorial government to support individuals affected by COVID-19 and that are taxable under subparagraphs 56(1)(r)(i) or (iv), or clause 56(1)(r)(iv.1)(E) of the Income Tax Act, minus any amounts repaid within the same tax year using code 200.</p>
-<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p>  
+
 </details> 
 </li>
 <li class="code-num">
 <details>  <summary>Code 201 – Repayment of COVID-19 financial assistance </summary> 
    <p id="cd201">Report the amount of federal, provincial or territorial COVID-19 financial assistance payments that were repaid in the year in respect of an overpayment of federal, provincial or territorial COVID-19 financial assistance payments received in a prior year using code 201. </p>
-<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/payments-cra/individual-payments/repay-covid-benefits.html">Repay COVID-19 benefits</a></p> 
  </details> 
 </li>
 <li class="code-num">
