--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -78,6 +78,31 @@
             <h2 id="h-1">Who can open an FHSA</h2>
             <p>To open an FHSA, you must be a qualifying individual.</p>
             <p>You are a qualifying individual if your meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
+
+ <section>
+                  <ul class="checkbox-lg checkbox-zebra">
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
+                        <label for="eg1">You <strong>did not apply for or receive</strong> the CERB, the [YYY], the [ZZZ], or any EI benefits or QPIP benefits for the same period</label>
+                        <details class="mrgn-lft-lg">
+                           <summary>You can only get 1 emergency benefit at a time</summary>
+                           <p>You are only allowed to receive one type of federal emergency income support benefit in the same week: the CERB, the [YYY], the [ZZZ], the [WWW], or EI benefits.</p>
+                        </details>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg2" class="action-checkbox cb-dmm">
+                        <label for="eg2">You were <strong>not eligible</strong> for EI benefits through Service Canada</label>
+                        <details class="mrgn-lft-lg">
+                           <summary>Find the right benefit for you</summary>
+                           <p>If you finished your CERB payments and still need financial support, find out which emergency support benefit is the best one for you.</p>
+                           <p>Go to: <a href="../0_archive-of-prev-content/cerb23-03-2020/cerb-cra/after.html">What to do after CERB</a></p>
+                        </details>
+                     </li>
+                     <li class="checkbox">
+                        <input type="checkbox" id="eg3" class="action-checkbox cb-dmm">
+                        <label for="eg3">You are not (or no longer) eligible for the CERB</label>
+                     </li>
+		 
  <ul class="fa-ul">
 	<li><span class="fas fa-check text-success fa-li"></span> 
             
