--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -165,7 +165,12 @@
                         </tr>
                                               
                         <tr>
-                           <td><a href="epsp.html">Payments from an employees profit sharing plan (EPSP)</a> </td>
+                           <td><a href="epsp.html">Payments from a profit sharing plan</a> 
+   <p>Includes:</p> 
+						   <ul class="colcount-md-2"><li><abbr title="Employee profit sharing plan">EPSP</abbr>  payments</li>
+							   <li><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</li></ul></td>
+                    
+</td>
                            <td>Type of remuneration </td>
                         </tr>
 		
@@ -181,7 +186,7 @@
                         <tr>
                            <td><p><a href="lumpsum.html">Lump-sum payments</a></p>
 						   <p>Includes:</p> 
-						   <ul class="colcount-md-3"><li>Single payments</li><li>RRSP payments</li><li>RPP payments</li><li> DPSP payments</li><li> RRIF payments</li></ul></td>
+						   <ul class="colcount-md-3"><li>Single payments</li><li> <abbr title="Registered retirement savings plan">RRSP</abbr> payments</li><li><abbr title="Registered pension plan">RPP</abbr> payments</li><li><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</li><li><abbr title="Registered retirement income fund">RRIF</abbr> payments</li></ul></td>
                            <td>Type of remuneration </td>
                         </tr>
 
