--- a/payroll/calculate/payment/epsp.html
+++ b/payroll/calculate/payment/epsp.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Payments from an employees profit sharing plan (EPSP) - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Payments from a profit sharing plan - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -93,7 +93,7 @@
       </li>
 
  <li>
-	 <a href="epsp.html" class="active" aria-current="page">Payments from an employees profit sharing plan (EPSP)</a>
+	 <a href="epsp.html" class="active" aria-current="page">Payments from a profit sharing plan</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -267,8 +267,8 @@
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Payments from an employees profit sharing plan (EPSP)</h1>
-<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/employees-profit-sharing-plan.html">Employees profit sharing plan</a> </p>
+<h1 property="name" id="wb-cont" class="gc-thickline">Payments from a profit sharing plan</h1>
+<p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/employees-profit-sharing-plan.html">Employees profit sharing plan</a> and minor content on DPSP to redirect the user.</p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="">Add if necessary</a></li>
