--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -136,8 +136,8 @@
 <li><a href="patronage.html" class="hidden-xs hidden-sm">Patronage payments</a>
 <a href="patronage.html#gc-document-nav" class="visible-xs visible-sm">Patronage payments</a></li>
 
-<li><a href="epsp.html" class="hidden-xs hidden-sm"> Payments from employees profit sharing plan (EPSP)</a>
-<a href="epsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from employees profit sharing plan (EPSP)</a></li>
+<li><a href="epsp.html" class="hidden-xs hidden-sm"> Payments from a profit sharing plan</a>
+<a href="epsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from a profit sharing plan</a></li>
 
 <li><a href="rdsp.html" class="hidden-xs hidden-sm">Payments from registered disability savings plan (RDSP)</a>
 <a href="rdsp.html#gc-document-nav" class="visible-xs visible-sm">Payments from registered disability savings plan (RDSP)</a></li>
