--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -736,7 +736,7 @@
 			<ul class="wb-filter list-unstyled" data-wb-filter='{
 		"selector": ".code-num"
 	}'>
- <div class="btn-group mrgn-tp-md mrgn-bttm-md">
+ <div class="btn-group">
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
