--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -83,24 +83,58 @@
                   <ul class="checkbox-lg checkbox-zebra">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
-                        <label for="eg1">You <strong>did not apply for or receive</strong> the CERB, the [YYY], the [ZZZ], or any EI benefits or QPIP benefits for the same period</label>
+                        <label for="eg1">You are 18 years of age or older</label>
                         <details class="mrgn-lft-lg">
-                           <summary>You can only get 1 emergency benefit at a time</summary>
-                           <p>You are only allowed to receive one type of federal emergency income support benefit in the same week: the CERB, the [YYY], the [ZZZ], the [WWW], or EI benefits.</p>
+                           <summary>If legal age in your province is 19 years old</summary>
+                           <p>In certain provinces and territories, the legal age at which an individual can enter into a contract (which includes opening an FHSA) is 19 years old.</p>
                         </details>
                      </li>
                      <li class="checkbox">
                         <input type="checkbox" id="eg2" class="action-checkbox cb-dmm">
-                        <label for="eg2">You were <strong>not eligible</strong> for EI benefits through Service Canada</label>
+                        <label for="eg2">You are a resident of Canada</label>
                         <details class="mrgn-lft-lg">
-                           <summary>Find the right benefit for you</summary>
-                           <p>If you finished your CERB payments and still need financial support, find out which emergency support benefit is the best one for you.</p>
-                           <p>Go to: <a href="../0_archive-of-prev-content/cerb23-03-2020/cerb-cra/after.html">What to do after CERB</a></p>
+                           <summary>If you become a non-resident after opening an FHSA</summary>
+                           	<p>If you become a non-resident of Canada after you open your FHSA, you can continue to participate normally in your FHSA, with one exception:</p>
+<ul class="fa-ul">
+<li><span class="fas fa-times text-danger fa-li fa-lg"></span>You cannot make a <a href="#qualwith" aria-controls="qualwith" class="wb-lbx" role="button">qualifying withdrawal&nbsp;<span class="far fa-question-circle"></span></a> to build or buy a <a href="#qualhome" aria-controls="qualhome" class="wb-lbx" role="button">qualifying home&nbsp;<span class="far fa-question-circle"></span></a> while you are a non-resident of Canada.</li>
+</ul>
+<p>One of the requirements of a qualifying withdrawal is that you must be a resident of Canada throughout the period that begins with the date of the first qualifying withdrawal and ends with the date of acquisition of the qualifying home.</p>
+<p>If you are a non-resident of Canada, any taxable withdrawal from your FHSA will be subject to withholding tax in the year of withdrawal.</p>
+
+    
+
+
+</div>
+<div class="mwsalerts section">
+
+
+	
+		
+
+
+	
+
+
+
+<div class="alert alert-info">
+	<p>The withholding tax is 25% for non-residents of Canada, unless reduced by a treaty. For more information, go to <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/ic76-12.html">Information Circular IC76-12, Applicable rate of part XIII tax on amounts paid or credited to persons in countries with which Canada has a tax convention</a>.</p>
+</div>
                         </details>
                      </li>
                      <li class="checkbox">
                         <input type="checkbox" id="eg3" class="action-checkbox cb-dmm">
-                        <label for="eg3">You are not (or no longer) eligible for the CERB</label>
+                        <label for="eg3">You are considered a first-time home buyer</label>
+<p>For opening an FHSA, you are a first-time home buyer if <strong>you or your spouse or common-law partner</strong> did not own or jointly own a qualifying home</p>
+	  <ul class="cnjnctn-type-or mrgn-tp-0">
+                                    <li class="cnjnctn-col">
+                                        in this calendar year
+
+                                    </li>
+                                    <li class="cnjnctn-col">
+                                       in the previous 4 calendar years </li></ul>
+	 
+ </ul>
+			     
                      </li>
 		 
  <ul class="fa-ul">
