--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -123,7 +123,7 @@
                      </li>
                      <li class="checkbox">
                         <input type="checkbox" id="eg3" class="action-checkbox cb-dmm">
-                        <label for="eg3">You are considered a first-time home buyer</label>
+                        <label for="eg3">You are considered a first-time home buyer for opening an FHSA</label>
 <p>For opening an FHSA, you are a first-time home buyer if <strong>you or your spouse or common-law partner</strong> did not own or jointly own a qualifying home</p>
 	  <ul class="cnjnctn-type-or mrgn-tp-0">
                                     <li class="cnjnctn-col">
