--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -78,7 +78,7 @@
             <h2 id="h-1">Who can open an FHSA</h2>
             <p>To open an FHSA, you must be a qualifying individual.</p>
             <p>You are a qualifying individual if your meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
-
+ <section class="gc-nav-section experimental provisional">
  <section>
                   <ul class="checkbox-lg checkbox-zebra">
                      <li class="checkbox">
