--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -80,6 +80,7 @@
             <p>You are a qualifying individual if your meet <strong>all</strong> of the following requirements at the time the account is opened:</p>
  <section class="gc-nav-section experimental provisional">
  <section>
+	 <section>
                   <ul class="checkbox-lg checkbox-zebra">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
