--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -170,7 +170,7 @@
 						   <ul class="colcount-md-2"><li><abbr title="Employee profit sharing plan">EPSP</abbr>  payments</li>
 							   <li><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</li></ul></td>
                     
-</td>
+
                            <td>Type of remuneration </td>
                         </tr>
 		
@@ -213,7 +213,7 @@
                            <td>Type of remuneration </td>
                         </tr>
 			 <tr>
-                           <td><p><a href="elected-officials.html">Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)</a> <span class="label label-default">CVB - In progress</span></p></p>Includes:</p> 
+                           <td><p><a href="elected-officials.html">Payments of stipends, fees or remuneration related to tenure of office (elected or appointed officials)</a> <span class="label label-default">CVB - In progress</span></p><p>Includes:</p> 
 						   <ul class="colcount-md-2"><li>Directors</li><li>Mayors</li><li>Municipal councillors</li><li>School commissioners</li><li>Chiefs of Indian bands</li><li>Band councillors</li><li>Executors</li><li> Liquidators</li><li>Administrators of estates </li><li> Any other position when a person is elected or appointed to that office</li></ul></td>
                            <td>Type of remuneration </td>
                         </tr>
