--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1054,7 +1054,7 @@
 <dd><p>Report the total <abbr title="Employment insurance">EI</abbr> deductions and the correct insurable earnings using box 18 <strong>and</strong> <a href="#bx_24">box 24</a> if you overdeducted EI premiums (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted EI premiums:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a>. </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
         </ul>
   </dd>
 
@@ -1062,7 +1062,7 @@
 <dd><p><strong>Do not </strong>report any amount using box 18 if you under deducted <abbr title="Employment insurance">EI</abbr> premiums.</p>
             <p>Learn more if you under deducted EI premiums:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
-<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a>. </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
         </ul>
   </dd>
 <dt>Salary deferral arrangements</dt>
