--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1764,7 +1764,7 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_87">Code 87 – Emergency services volunteer exempt amount</summary> 
+            <summary id="cd_87">Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
 	<p>Report the tax-exempt employment income (less than $1,000) you paid to your employee who is an emergency volunteer as a government, a municipality, or a public authority using using code 87.</p>
 
  <h4>Specific situations</h4>
