--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1642,7 +1642,7 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_69">Code 69&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">Non-eligible </span>retiring allowances</summary> 
+            <summary id="cd_69">Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
             <p>Report the tax-exempt retiring allowance you paid to your employee  who is registered, or entitled to be registered under the Indian Act that is not eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
@@ -1655,7 +1655,8 @@
             </details> 
 			</li>
 			<li class="code-num">
-            <details><summary id="cd_71">Code 71&nbsp;– Indian (exempt income)&nbsp;– Employment</summary>       <p>Report the tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
+            <details><summary id="cd_71">Code 71 – Indian (exempt income) – Employment <span class="label label-info">Jeremiah</span></summary>
+       <p>Report the tax-exempt employment income you paid to your employee  who is registered, or entitled to be registered under the Indian Act using code 71.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -1782,7 +1783,7 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_88">Code 88&nbsp;– Indian (exempt income)&nbsp;– <span class="nowrap">self-employment</span></summary> 
+            <summary id="cd_88">Code 88 – Indian (exempt income) – <span class="nowrap">Self-employment</span> <span class="label label-info">Jeremiah</span></summary> 
             <p>Report the tax-exempt self-employment income you paid to a person who is registered, or entitled to be registered under the Indian Act who is fisher, barber or hairdresser, or taxi driver or driver of other passenger-carrying vehicles using code 88.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
