--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -79,7 +79,10 @@
 		    <section>
                <h2 id="h-1">Eligibility criteria</h2>
                <p class="lead">To be eligible for the [Name of X] [ABC], you must meet the following conditions:</p>
-               <section>
+              <section class="gc-nav-section experimental provisional">
+           
+            <section>
+			    <section>
                   <ul class="checkbox-lg checkbox-zebra">
                      <li class="checkbox">
                         <input type="checkbox" id="eg1" class="action-checkbox cb-dmm">
