--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -182,7 +182,7 @@
            <p>A withdrawal from an FHSA is not required to be included in your income if it is:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
-<p>when you withdraw from your FHSA to buy a home and meet all the conditions for a qualifying withdrawal</p>
+<p>when you withdraw from your FHSA to buy a home and <a href="withdrawals.html#h-2">meet all the conditions for a qualifying withdrawal</a></p>
 </li>
 <li class="cnjnctn-col"><h3>A designated amount</h3>
 <p>when you withdraw or transfer from your FHSA because you contributed or transferred too much and have an excess amount</p>
