--- a/fhsa/v3/deductions.html
+++ b/fhsa/v3/deductions.html
@@ -434,7 +434,7 @@
 <li class="brdr-bttm"><span class="fas  fa-li"><span class="fa-lg">–</span><span class="wb-inv">minus</span></span> <span class="mrgn-tp-0 text-muted h5"><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span>$5,000 (December 1 transfer from her RRSP to her FHSA)</span></li>
 <li><span class="fas  fa-li"><span class="fa-lg">=</span><span class="wb-inv">eqauls</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success"><span class="fas fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x fa-inverse"></em></span><span class="mrgn-tp-0 text-muted h5">$3,000 (available FHSA deduction for 2023)</span></span></li>
 </ul>
-<p>For more information on how the $3,000 amount is calculated, go to <a href="#h_1">How much can you deduct</a>.</p>
+<p>For more information on how the $3,000 amount is calculated, go to <a href="#h-2">How much can you deduct</a>.</p>
 
     
 
