--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -184,10 +184,12 @@
 <li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
 <p>when you withdraw from your FHSA to buy a home and <a href="withdrawals.html#h-2">meet all the conditions for a qualifying withdrawal</a></p>
 </li>
-<li class="cnjnctn-col"><h3>A designated amount</h3>
-<p>when you withdraw or transfer from your FHSA because you contributed or transferred too much and have an excess amount</p>
+<li class="cnjnctn-col"><h3>An amount otherwise included in your income</h3>
+
 </li>
-<li class="cnjnctn-col">an amount otherwise included in your income</li>
+<li class="cnjnctn-col">A designated amount</li>
+	<p>when you withdraw or transfer from your FHSA because you <a href="withdrawals.html#h-4">contributed or transferred too much</a> and have an excess amount</p>
+
 </ul>
 <p>In all other cases, the amount withdrawn from your FHSA is a taxable withdrawal and must be included as income on your income tax and benefit return for the year the withdrawal is received.</p>
 <p>If you transfer property <strong>directly</strong> from your FHSA to another FHSA, a <a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement savin<span class="nowrap">g</span> plan (RRSP<span class="nowrap">)&nbsp;</span><span class="far fa-question-circle"></span></a>, or a <a href="#rrif" aria-controls="rrif" class="wb-lbx" role="button">registered retirement income fund (RRIF)&nbsp;<span class="far fa-question-circle"></span></a>, this is a transfer and not a withdrawal. For more information, go to <a href="transfers.html">Transfers between FHSAs and other registered plans</a>.</p>
