--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -284,10 +284,13 @@
                      </li>
                     
                    
-                  <div class="alert alert-danger provisional" id="action-no-msg">
+                <div class="mwsalerts section">
+
+
+<div class="alert alert-info">
                     <h3>You need all of the above to make a qualifying withdrawal</h3>
 			  <p>If you do not meet all of the conditions above, the amount withdrawn from your FHSA may be a taxable withdrawal. You must include the amount you withdraw as income on your income tax and benefit return for the year the withdrawal is received.</p>
-                  </div>
+                  </div> </div>
                   <div class="alert alert-success hidden provisional" id="action-msg1">
                     <p>Based on your selections above:</p>
 			  <h3>You meet the conditions for a qualifying withdrawal</h3>
