--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -187,8 +187,8 @@
 <li class="cnjnctn-col"><h3>An amount otherwise included in your income</h3>
 
 </li>
-<li class="cnjnctn-col">A designated amount</li>
-	<p>when you withdraw or transfer from your FHSA because you <a href="withdrawals.html#h-4">contributed or transferred too much</a> and have an excess amount</p>
+<li class="cnjnctn-col"><h3>A designated amount</h3>
+	<p>when you withdraw or transfer from your FHSA because you <a href="withdrawals.html#h-4">contributed or transferred too much</a> and have an excess amount</p></li>
 
 </ul>
 <p>In all other cases, the amount withdrawn from your FHSA is a taxable withdrawal and must be included as income on your income tax and benefit return for the year the withdrawal is received.</p>
