--- a/fhsa/v2/withdrawals.html
+++ b/fhsa/v2/withdrawals.html
@@ -191,7 +191,7 @@
 	<p>when you withdraw or transfer from your FHSA because you <a href="withdrawals.html#h-4">contributed or transferred too much</a> and have an excess amount</p></li>
 
 </ul>
-<p>In all other cases, the amount withdrawn from your FHSA is a taxable withdrawal and must be included as income on your income tax and benefit return for the year the withdrawal is received.</p>
+<p>In all other cases, the amount withdrawn from your FHSA is a <a href="withdrawals.html#h-3">taxable withdrawal</a> and must be included as income on your income tax and benefit return for the year the withdrawal is received.</p>
 <p>If you transfer property <strong>directly</strong> from your FHSA to another FHSA, a <a href="#rrsp" aria-controls="rrsp" class="wb-lbx" role="button">registered retirement savin<span class="nowrap">g</span> plan (RRSP<span class="nowrap">)&nbsp;</span><span class="far fa-question-circle"></span></a>, or a <a href="#rrif" aria-controls="rrif" class="wb-lbx" role="button">registered retirement income fund (RRIF)&nbsp;<span class="far fa-question-circle"></span></a>, this is a transfer and not a withdrawal. For more information, go to <a href="transfers.html">Transfers between FHSAs and other registered plans</a>.</p>
 
     
