--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -178,6 +178,7 @@
                <li><a href="#h-1">Who can open an FHSA</a></li>
                <li><a href="#h-2">How to open an FHSA</a></li>
 		                   <li><a href="#h-3">When to close an FHSA</a></li>
+		                   <li><a href="#h-4">When your FHSA is considered closed</a></li>
 
               
             </ul>
@@ -475,6 +476,10 @@
 
 
 </div>
+
+		             <h2 id="h-4">When your FHSA is considered closed</h2>
+		 <p>Content needed</p>
+
 <div class="mwsbodytext text parbase section">
     
 
