--- a/fhsa/v3/in.html
+++ b/fhsa/v3/in.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Participating in your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
+         <title>Contributions and transfers into your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -58,7 +58,7 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
           
-            <h1 property="name" id="wb-cont" class="gc-thickline">Participating in your FHSAs</h1>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Contributions and transfers into your FHSAs</h1>
             <p>Learn the rules around participating in your First Home Savings Account (FHSA).</p>
 		
 
