--- a/fhsa/v3/in.html
+++ b/fhsa/v3/in.html
@@ -59,7 +59,7 @@
          <main role="main" property="mainContentOfPage" class="container">
           
             <h1 property="name" id="wb-cont" class="gc-thickline">Contributions and transfers into your FHSAs</h1>
-            <p>Learn the rules around participating in your First Home Savings Account (FHSA).</p>
+            <p>Learn how much you can contribute or transfer to your First Home Savings Account (FHSA), and how to transfer in your account.</p>
 		
 
 	
