--- a/fhsa/v3/in.html
+++ b/fhsa/v3/in.html
@@ -73,7 +73,7 @@
                <li><a href="#h-2">What is a direct transfer</a></li>
 		                   <li><a href="#h-3">Transfer from your RRSPs to your FHSAs</a></li>
 		                   <li><a href="#h-4">Transfers between your FHSAs</a></li>
-		                   <li><a href="#h-5">Carryforward up to $8,000</a></li>
+		                   <li><a href="#h-5">Carryforward unused contribution room up to $8,000</a></li>
 
 
 
@@ -272,8 +272,8 @@
 
 
 </div>
-  <h2 id="h-5">Carryforward up to $8,000</h2>
-<p>You can carryforward up to a <strong>maximum of $8,000</strong> of unused FHSA participation room at the end of the year to use in the following year. This amount is referred to as your FHSA carryforward. Any FHSA carryforward will be included in the calculation of your FHSA participation room for the year.</p>
+  <h2 id="h-5">Carry forward unused contribution room up to $8,000</h2>
+<p>You can carry forward up to a <strong>maximum of $8,000</strong> of unused FHSA participation room at the end of the year to use in the following year. This amount is referred to as your FHSA carryforward. Any FHSA carryforward will be included in the calculation of your FHSA participation room for the year.</p>
 
     
 
