--- a/fhsa/v3/out.html
+++ b/fhsa/v3/out.html
@@ -183,22 +183,22 @@
 
             </ul>
 
-    <h2 id="h-1">Types of withdrawals and transfers</h2>
+    <h2 id="h-1">Tax consequences of removing property from your FHSAs</h2>
 		 <p>A withdrawal or transfer from an FHSA is not required to be included in your income if it is:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h3>A qualifying withdrawal</h3>
-<p>when you withdraw from your FHSA to buy a home and <a href="withdrawals.html#h-2">meet all the conditions for a qualifying withdrawal</a></p>
+<p>when you withdraw from your FHSA to buy a home and <a href="out.html#h-2">meet all the conditions for a qualifying withdrawal</a></p>
 </li>
 <li class="cnjnctn-col"><h3>A designated amount</h3>
-	<p>when you withdraw or transfer from your FHSA because you <a href="withdrawals.html#h-4">contributed or transferred too much</a> and have an excess amount</p></li>
+	<p>when you withdraw or transfer from your FHSA because you <a href="out.html#h-4">contributed or transferred too much</a> and have an excess amount</p></li>
 
 </li>
 <li class="cnjnctn-col"><h3>A direct transfer</h3>
-<p>when you  <a href="withdrawals.html#h-5">transfer from your FHSA to your RRSPs or RRIFs</a></p>
+<p>when you  <a href="out.html#h-5">transfer from your FHSA to your RRSPs or RRIFs</a></p>
 </li>
 </ul>
-<p>A withdrawal or transfer from an FHSA must be included as income on your income tax and benefit return if it is a taxable withdrawal.When your withdrawal is not a qualifying withdrawal, designated amount, or an amount otherwise included in your income it is a  <a href="withdrawals.html#h-3">taxable withdrawal.</a></p></p>
+<p>A withdrawal or transfer from an FHSA must be included as income on your income tax and benefit return if it is a taxable withdrawal. When your withdrawal is not a qualifying withdrawal, designated amount, or an amount otherwise included in your income it is a  <a href="out.html#h-3">taxable withdrawal.</a></p></p>
 	
             <h2 id="h-2">Making qualifying withdrawals from your FHSAs</h2>
            <p>If you meet the qualifying withdrawal conditions, you can withdraw all of the property from your FHSAs tax-free. You can do this either in a single withdrawal or a series of withdrawals.&nbsp;</p>
