--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -71,7 +71,12 @@
           <p>How much you can contribute or transfer to your FHSAs, and calculating your FHSA participation room</p>
         </section>
       </div>
-     
+
+	     <section>
+          <h3><a href="participate.html">Transfers into your FHSAs</a></h3>
+          <p>How to make transfers into your FHSAs</p>
+        </section>
+      </div>
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="out.html">Withdrawals and transfers out of your FHSAs</a></h3>
