--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -67,7 +67,7 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="participate.html">Participating in your FHSAs</a></h3>
+          <h3><a href="participate.html">Contributions and transfers into your FHSAs</a></h3>
           <p>How much you can contribute or transfer to your FHSAs, and calculating your FHSA participation room</p>
         </section>
       </div>
