--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -61,13 +61,13 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="open.html">Opening your FHSAs</a></h3>
+          <h3><a href="opening.html">Opening your FHSAs</a></h3>
           <p>Review eligibility criteria and find out how you can open an FHSA</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="participate.html">Contributions and transfers into your FHSAs</a></h3>
+          <h3><a href="in.html">Contributions and transfers into your FHSAs</a></h3>
           <p>How much you can contribute or transfer to your FHSAs, and calculating your FHSA participation room</p>
         </section>
       </div>
