--- a/fhsa/v4/index.html
+++ b/fhsa/v4/index.html
@@ -61,7 +61,7 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="open.html">Opening your FHSAs</a></h3>
+          <h3><a href="opening.html">Opening your FHSAs</a></h3>
           <p>Review eligibility criteria and find out how you can open an FHSA</p>
         </section>
       </div>
@@ -73,7 +73,7 @@
       </div>
 
 	     <section>
-          <h3><a href="participate.html">Transfers into your FHSAs</a></h3>
+          <h3><a href="transfersin.html">Transfers into your FHSAs</a></h3>
           <p>How to make transfers into your FHSAs</p>
         </section>
       </div>
