--- a/fhsa/v4/out.html
+++ b/fhsa/v4/out.html
@@ -172,7 +172,7 @@
 
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Types of withdrawals and transfers</a></li>
+               <li><a href="#h-1">Tax consequences of removing property from your FHSAs</a></li>
 		                   <li><a href="#h-2">Making qualifying withdrawals from your FHSAs</a></li>
 
                <li><a href="#h-3">Making taxable withdrawals from your FHSAs</a></li>
