--- a/fhsa/v3/deductions.html
+++ b/fhsa/v3/deductions.html
@@ -416,7 +416,7 @@
         
             <li>
                 <details>
-                    <summary>Example – Deductions when you have an excess FHSA amount from contributions and transfers</summary>
+                    <summary>Example: Deductions when you have an excess FHSA amount from contributions and transfers</summary>
                     <div class="mwsbodytext text parbase section">
     
 
