--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -840,7 +840,7 @@
 </li>
 <li class="code-num">
  <details >  <summary>Code 116 – Medical travel assistance</summary> 
-   <p id="cd116">Report the amount of the <strong>medical travel portion only</strong> you paid for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
+   <p id="cd116">Report the amount of the <strong>medical travel portion only</strong> you paid to the employees of another employer if you are a third party for medical travel assistance in a prescribed zone, using code 116 <strong>and</strong> the total amount of the travel benefit using <a href="#cd028">code 028</a>.</p>
 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
@@ -882,7 +882,7 @@
 </li>
 <li class="code-num">
  <details>  <summary>Code 124 – Board and lodging at special work sites </summary> 
-  <p  id="cd124">Report the tax-exempt board, lodging and housing at special work sites using code 124 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd028">code 028</a>. </p>
+  <p  id="cd124">Report the tax-exempt board, lodging and housing at special work sites paid to the employees of another employer if you are a third party using code 124 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd028">code 028</a>. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 
  </details> 
@@ -930,7 +930,7 @@
 </details>
  </li>
 <li class="code-num">
- <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant </summary> 
+ <details>  <summary>Code 130 – Apprenticeship Incentive Grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant </summary> 
   <p  id="cd130">Report the amount of Apprenticeship Incentive Grants or Apprenticeship Incentive Grants for Women you paid to the registered apprentice who has successfully completed their first or second-year level (or equivalent) of their apprenticeship program in a Red Seal trade using code 130.</p> 
   <p>Also report the amount of Apprenticeship Completion Grants you paid to the registered apprentice who has completed their apprenticeship training in a Red Seal trade.</p> 
 <p>Learn more from Service Canada: <a href="https://www.canada.ca/en/services/jobs/training/support-skilled-trades-apprentices/grants.html">Apprenticeship Grants</a> or call <strong>1-866-742-3644</strong> </p> 
@@ -1127,7 +1127,7 @@
 </li>
 <li class="code-num">
  <details > <summary>Code 205 – One-time payment for older seniors </summary> 
- <p id="cd205">Report the one-time supplementary OAS payment made to older seniors made in 2011 or 2012 using code 205.</p>
+ <p id="cd205">Report the one-time supplementary OAS payment made to older seniors made in 2021 or 2022 using code 205.</p>
 <p><strong>Do not</strong> report this payment using the T4A(OAS) slip.</p> 
 <p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
    </details> 
