--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -239,7 +239,7 @@
                         </tr>
 	   
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/special-situations/retiring-allowances.html">Payments of retiring allowances</a> </td>
+                           <td><a href="retiring-allowances.html">Payments of retiring allowances</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
 			<tr>
