--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -918,7 +918,7 @@
 </dd>
 
 <dt>Retiring allowances</dt>
-<dd>Add situation</dd>
+<dd> <p><strong>Do not </strong>report the retiring allowance using box 14.</p></dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
 <dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
@@ -1623,15 +1623,31 @@
 			<li class="code-num">			
             <details>
             <summary id="cd_66">Code 66&nbsp;– Eligible retiring allowances</summary> 
-            <p>Enter code 66 and the amount of the eligible retiring allowance that was paid in the year and is eligible for transfer to an RPP, RRSP or PRPP, even if not transferred. </p>
+            <p>Report the eligible retiring allowances you paid in the year to your employee that is eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Non-eligible retiring allowances </dt>
+<dd><strong>Do not </strong>report non-eligible retiring allowances using code 66, use <a href="#cd_67">code 67</a>.</dd>
+</dl>
+
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/retire-allowance.html">Payments of retiring allowances</a></p>
             </details> 
 			</li>
 			<li class="code-num">
             <details>
             <summary id="cd_67">Code 67&nbsp;– <span class="nowrap">Non-eligible</span> retiring allowances</summary> 
-            <p>Enter code 67 and the amount of the retiring allowance that was <strong>not </strong>eligible for transfer to an RPP, RRSP or PRPP. </p>
+             <p>Report the non-eligible retiring allowances you paid in the year to your employee that was <strong>not</strong> eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Eligible retiring allowances </dt>
+<dd><strong>Do not </strong>report eligible retiring allowances using code 67, use <a href="#cd_66">code 66</a>.</dd>
+</dl>
+
+          <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/retire-allowance.html">Payments of retiring allowances</a></p>
             </details> 
 			</li>
 			<li class="code-num">
