--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1370,47 +1370,26 @@
 		
 		<li class="code-num">
 		    <details>
-            <summary id="bx_50">Box 50&nbsp;– RPP or DPSP registration number</summary>
-            <p>Enter in box 50 the seven-digit registration number we issue for a registered pension plan (RPP) or a deferred profit sharing plan (DPSP) under which you report a pension adjustment (PA). Do this even if your plan requires only employer contributions.</p>
-            <p>However, <strong>if you make contributions to union pension funds</strong>, enter the union's plan number instead (the union is required to give that number to you).</p>
-            <p>If your employee is a member of <strong>more than one plan</strong>, enter only the number of the plan under which the employee has the largest PA.</p>
+            <summary>Box 50&nbsp;– RPP or DPSP registration number</summary>
+         <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using box <a href="#bx_52">box 52</a>.</p> 
+
+<p>You have to report the plan number even if your plan requires only employer contributions.</p>
+
+<p>If you made contributions to <strong>more than one</strong> plan for the employee, enter only the number of the plan under which the employee has the largest <abbr title="pension adjustment">PA</abbr>.</p> 
             </details>
            </li>
 
 <li class="code-num">
             <details>
-            <summary id="bx_52">Box 52&nbsp;– Pension adjustment</summary>
-            <p>If you have a registered pension plan (RPP) or a deferred profit sharing plan (DPSP), report, in dollars only, the amount of your employee's pension adjustment (PA) for the year. </p>
-            <p>If you have to fill out more than one T4 slip for your employee because they worked in more than one province or territory, report the PA proportionately on each T4 slip. If you cannot apportion the PA, report the total amount on one slip.</p>
-            <p>If your employee participates in one or more RPP or DPSP, calculate their PA using the <strong>total </strong>amount of all pension credits accumulated by the employee under all these plans for the year.</p>
-            <p>If your employee is on a leave of absence and is still accruing pensionable service or credits under the plan, you must report the PA on a T4 slip. This is true even if the employee has no employment income in the tax year. Administrators of multi-employee plans (MEPs) should report the PA for the employee on leave on a <strong>T4A </strong>slip.</p>
-            <p><strong>Do not </strong>report any amount in box 52 if the employee participated in your RPP or DPSP and <strong>one </strong>of the following applies:</p>
-            <ul>
-            <li>The calculated PA is a negative amount or zero </li>
-            <li>The employee died during the year </li>
-            <li>The employee, even if they are still a member of the plan, no longer accrues new pension credits in the year (for example, The employee has accrued the maximum number of years of service in respect of the plan) </li>
-            </ul>
-            <h3 id="h_52spec">Special rules concerning the PA</h3>
-            <p>Special calculation rules apply, in some circumstances, to employees who:</p>
-            <ul>
-            <li>Left your employment during the year </li>
-            <li>Are on, or return from, a leave of absence </li>
-            <li>Participate in a salary deferral arrangement </li>
-            <li>Work for you part-time </li>
-            </ul>
-            <p>Learn more about how to calculate the PA: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4084.html">T4084, Pension Adjustment Guide</a></p>
-            <p>If you need more help calculating a PA, see your pension plan administrator or call our Registered Plans Directorate at <strong>1-800-267-3100 </strong>in Canada and the United States or, if you are calling outside of Canada or the United States, call us collect at <strong>613-221-3105</strong>.</p>
-            <h3 id="h_52un">Unregistered retirement plans or arrangements</h3>
-            <p>An individual's RRSP deduction limit is affected if they are entitled to benefits under any of the following three types of unregistered retirement plans or arrangements:</p>
-            <ul>
-            <li>A specified retirement arrangement (SRA) </li>
-            <li>A government-sponsored retirement arrangement (GSRA) </li>
-            <li>A foreign pension plan </li>
-            </ul>
-            <p>For more information about the PA for these types of plans or arrangements, see Guide T4084, Pension Adjustment Guide, or call our Registered Plans Directorate at <strong>1-800-267-3100 </strong>in Canada and the United States or, if you are calling from outside of Canada or the United States, call us collect at <strong>613-221-3105</strong>.</p>
+            <summary>Box 52&nbsp;– Pension adjustment</summary>
+         <p id="bx_52">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has under a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) during a period of leave or reduced services using box 52.</p>
 
- <h4>Specific situation</h4>
+<p>You must also enter the plan registration number using <a href="#bx_50">box 50</a>.</p>
+ <h4>Specific situations </h4>
 <dl class="dl-horizontal">
+
+<dt>Periods of leave or reduced services under a <abbr title="Multi-employer plan">MEP</abbr></dt>
+<dd><strong>Do not</strong> report the amount of a <abbr title="pension adjustment">PA</abbr> for periods of leave or reduced services if you are the plan administrator for a <abbr title="Multi-employer plan">MEP</abbr></strong> using box 52, use the <a href="/cra-arc/payroll/file/t4Aslip.html">T4A slip</a>. </dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
@@ -1421,6 +1400,8 @@
 <dt>Add title</dt>
 <dd>Add situation</dd>
 </dl>   
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/registered-plans-administrators/pspa/about-pension-adjustment.html">Pension Adjustment (PA)</a></p>   
             </details>
 </li>
 
