--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1363,14 +1363,15 @@
           </li>
 		<li class="code-num">
             <details>
-            <summary id="bx_46">Box 46&nbsp;– Charitable donations</summary>
-            <p>Report the amount you deducted from your employee's earnings for donations to qualified donees in Canada.</p>
+            <summary id="bx_46">Box 46&nbsp;– Charitable donations <span class="label label-info">Jeremiah</span></summary>
+            <p>Report the amount you deducted from your employee's earnings for donations to a registered charity in Canada using box 46.</p>
+		    <p>Learn more: <a href="https://apps.cra-arc.gc.ca/ebci/hacc/srch/pub/dsplyBscSrch?request_locale=en">List of Charities</a></p>
             </details>
            </li>
 		
 		<li class="code-num">
 		    <details>
-            <summary>Box 50&nbsp;– RPP or DPSP registration number</summary>
+            <summary>Box 50&nbsp;– RPP or DPSP registration number <span class="label label-info">Jeremiah</span></summary>
          <p id="bx_50">Enter the 7-digit registration number that the CRA gave you for your <abbr title="registered pension plan">RPP</abbr> or <abbr title="deferred profit-sharing plan">DPSP</abbr> using box 50 if you reported an amount for a pension adjustment (<abbr title="pension adjustment">PA</abbr>) using box <a href="#bx_52">box 52</a>.</p> 
 
 <p>You have to report the plan number even if your plan requires only employer contributions.</p>
