--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -901,6 +901,12 @@
 <dt>Canadian Forces personnel and police officers</dt>
 <dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
 
+<dt>Employment commissions</dt>
+<dd>Report the employment income from employment commissions you paid to your employee who sold property or negotiated contracts for you using code box 14 <strong>and</strong> <a href="#cd_42">code 42</a>.</p>
+<p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 14.</p>  
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>  
+</dd>
+
 <dt>Emergency volunteers</dt>
 <dd><p>Report the taxable employment income ($1,000 or more) you paid to your employee who is an emergency volunteer (such as a firefighter, ambulance technician, or search and rescue volunteer) using box 14.</p>
 
@@ -1548,14 +1554,17 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_42">Code 42&nbsp;– Employment commissions</summary> 
-            <p>If an employee sold property or negotiated contracts for you, enter code 42 and the amount of the employee's commissions.</p>
-            <p>Also report this amount in box 14.</p>
+            <summary id="cd_42">Code 42&nbsp;– Employment commissions <span class="label label-info">Jeremiah</span></summary> 
+            <p>Report the amount of commissions you paid to your employee who sold property or negotiated contracts for you using code 42 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+           
+<p> Do <strong>not </strong>include GST/HST or PST in the amount reported in code 42.</p>  
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
+
             </details> 
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_43">Code 43&nbsp;– Canadian Armed Forces personnel and police deduction</summary> 
+            <summary id="cd_43">Code 43&nbsp;– Canadian Armed Forces personnel and police deduction <span class="label label-info">Jeremiah</span></summary> 
            
 <p>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
 
