--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1488,19 +1488,25 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_32">Code 32&nbsp;– Travel in a prescribed zone</summary> 
-            <p>If you provided an employee living in a prescribed zone with an amount for travel assistance, enter code 32 and the corresponding amount. Include this amount in box 14. If any part was for medical travel assistance, go to code 33.</p> 
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+            <summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-info">Jeremiah</span></summary> 
+           <p>Report the total amount of the travel benefit paid to your employees using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Medical travel assistance </dt>
+<dd>Report the total amount of the travel benefit using code 32 <strong>and</strong> <a href="#cd_33">code 33</a> for the medical portion only.</dd>
+</dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
+
             </details> 
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_33">Code 33&nbsp;– Medical travel assistance</summary> 
-            <p>If you provided an employee living in a prescribed zone with an amount for medical travel assistance, identify only the medical part under code 33. </p>
-            <p>Make sure the total amount of the travel assistance is also reported under code 32.</p>
-            <h5>Northern residents deduction</h5>
-            <p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slips to correctly calculate their deduction on Form T2222, Northern Residents Deductions for 2021. </p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+            <summary id="cd_33">Code 33 – Medical travel assistance <span class="label label-info">Jeremiah</span></summary> 
+            <p>Report the amount of the <strong>medical travel portion only</strong> you paid to your employee for medical travel assistance in a prescribed zone, using code 33 <strong>and</strong> the total amount of the travel benefit using <a href="#cd_32">code 32</a>.</p>
+
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+
             </details> 
 			</li>
 			<li class="code-num">
